[package]
name = "geodojo_county"
version = "0.1.1"
authors = ["Max Brown <mb39@sanger.ac.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.17"
reqwest = "0.11.5"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0"
clap = "~2.33.0"
again = "0.1"